# lsl-viewer

./: .gitignore  CMakeLists.txt  DESIGN.md  LICENSE  README.md  THIRD_PARTY_LICENSES  run.sh
.github/workflows/: build.yml
assets/fonts/: Roboto-LICENSE.txt
cmake/: patch_imgui_msl.cmake
docs/: building.md  windows-remote-control-testing.md
packaging/: Info.plist  lsl-viewer.desktop  lsl-viewer.iss  lsl-viewer.rc  make_ico.py  make_icon.py  portable.txt  release.md
src/: fft.hpp  filter.hpp  hf_stream_source.hpp  magic_ring_buffer.hpp  main.cpp  minmax_summary.hpp  mock_streams.hpp  profiler.hpp  recorder.hpp  remote_control.hpp  roboto_font.h  theme.hpp  thread_compat.hpp  xdf_writer.hpp
tests/: compare_labrecorder.py  compare_recording.py  ui_tests.cpp
tools/: cursor_test.cpp  lsl_test_streams.py  xdf_record.cpp
